# RustMP

./: Cargo.toml  LICENCE  README.md  output.txt
assets/: map.json  player_size.json
examples/: player_size.json
src/: client.rs  gameMain.rs  game_handle.rs  game_main.rs  lib.rs  main.rs  message.rs  network_sync.rs  player.rs  player_spawner.rs  rpc_funcs.rs  rpc_game_callables.rs  rpcexample.rs  server.rs  tutor1.rs  witch_attack_spikes.rs
