[package]
name = "rust_mp"
version = "0.1.0"
edition = "2021"



[dependencies]
bevy = "0.15.3"
bincode = "1.3.3"
colored = "3.0.0"
eframe = "0.31.0"
egui = "0.31.0"
serde = {version = "1.0.218",features = ["derive"]}
serde_json = "1.0.140"

[[bin]]
name = "rust_mp"
path = "src/main.rs"

[[bin]]
name = "game_main"
path = "src/game_main.rs"
