[package]
name = "rust_mp"
version = "0.1.0"
edition = "2021"



[dependencies]
macroquad = "0.4"
macroquad-tiled = "0.2.0"
macroquad-platformer = "0.2"
bincode = "1.3.3"
colored = "3.0.0"
eframe = "0.31.0"
egui = "0.31.0"
serde = {version = "1.0.218",features = ["derive"]}
serde_json = "1.0.140"
once_cell = "1.21.3"

[[bin]]
name = "rust_mp"
path = "src/main.rs"

[[bin]]
name = "game_main"
path = "src/game_main.rs"
